--- a/.opspec/test/op.yml
+++ b/.opspec/test/op.yml
@@ -16,10 +16,11 @@ run:
         inputs: { srcDir }
         outputs: { srcDir }
     - op:
-        pkg: { ref: fmt-code }
+        pkg: { ref: github.com/opspec-pkgs/golang.fmt#1.0.0 }
         inputs: { srcDir }
         outputs: { srcDir }
-    - op:
-        pkg: { ref: test-lint }
-        inputs: { srcDir }
-        outputs: { srcDir }
+    - parallel:
+      - op:
+          pkg: { ref: github.com/opspec-pkgs/golang.vet#1.0.0 }
+          inputs: { srcDir }
+          outputs: { srcDir }
